fixed icon spacing and updated research interests

--- a/style.css
+++ b/style.css
@@ -77,8 +77,8 @@ a{
 
 #links{
 	text-align:center;
-	word-spacing:40px;
-	width:200px;
+	word-spacing:20px;
+	width:175px;
 	float:center;
 	padding:0;
 	line-height: 400%;
